--- a/style.css
+++ b/style.css
@@ -51,3 +51,8 @@
         transform-style: preserve-3d;
         perspective: 1000px;
     }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 10px 10px 16px var(--shadow-dark), -10px -10px 16px var(--shadow-light);
+  }
