--- a/style.css
+++ b/style.css
@@ -53,6 +53,13 @@
     }
 
     .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 10px 10px 16px var(--shadow-dark), -10px -10px 16px var(--shadow-light);
+        transform: translateY(-5px);
+        box-shadow: 8px 8px 16px var(--shadow-dark), -8px -8px 16px var(--shadow-light);
   }
+
+    .card:active {
+        transform: translate(0px);
+        box-shadow: inset 4px 4px 8px var(--shadow-dark), inset -4px -4px 8px var(--shadow-light);
+    }
+
+    
