--- a/style.css
+++ b/style.css
@@ -79,3 +79,16 @@
     .card:hover .card-icon {
         transform: scale(1.1) translateZ(20px);
     }
+
+    .card h1 {
+        font-size: 24px;
+        margin-bottom: 10px;
+        font-weight: 600;
+    }
+
+    .card p {
+        margin-bottom: 15px;
+        font-size: 16px;
+        line-height: 1.4;
+        opacity: 0.7;
+    }
