--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
   }
 
     .card:active {
-        transform: translate(0px);
+        transform: translateY(0px);
         box-shadow: inset 4px 4px 8px var(--shadow-dark), inset -4px -4px 8px var(--shadow-light);
     }
 
